--- a/back/.env
+++ b/back/.env
@@ -63,6 +63,6 @@ AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
 
-GOOGLE_CLIENT_ID=582633277622-bsl72jbdt70hmjga4n803r7h8rge5bkn.apps.googleusercontent.com
-GOOGLE_CLIENT_SECRET=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
+GOOGLE_CLIENT_ID={CLIENT_ID}
+GOOGLE_CLIENT_SECRET={CLIENT_SECRET}
 GOOGLE_REDIRECT=http://localhost:8000/callback/google
